Bug 1331763 - part1: Support EME content for AudioContext::CreateMediaElementSource; r?cpearce